--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "mongoose": "^8.2.1",
     "multer": "^1.4.5-lts.1",
     "pdf-lib": "^1.17.1",
-    "pdf-parse": "^1.1.1"
+    "pdf-parse": "^1.1.1",
+    "pdf.js-extract": "^0.2.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
